oauth update and comments

--- a/Project code/demosky/templates/demosky/manage-sensors.html
+++ b/Project code/demosky/templates/demosky/manage-sensors.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		
 	function addSensor(id){
-		var x = document.getElementById("7_x1").value;  
+		var x = document.getElementById(id+"_x1").value;
 		var y = document.getElementById(id+"_y1").value;
 		if(x.length< 1 || y.length < 1){
 			alert("Please Fill X and Y coordinates.");
