--- a/Project code/demosky/templates/demosky/chat_box.html
+++ b/Project code/demosky/templates/demosky/chat_box.html
@@ -97,6 +97,7 @@
             <div id="chat-bottom" class="input-group">
                 <!--  <input disabled  maxlength="3" size="2" value="99" id="counter" ><small>character's remaining</small> -->
                 <input type="text" onkeyup="textCounter(this,'counter',99);" id="chat-msg" name="chat-msg" maxlength="99" class="form-control" />
+                <!--script to count and display text counter-->
                 <script>
                 function textCounter(field,field2,maxlimit)
                 {
