--- a/Project code/demosky/templates/demosky/homebasic.html
+++ b/Project code/demosky/templates/demosky/homebasic.html
@@ -31,7 +31,7 @@
       <img src="/static/DarkSky-Dev/imgs/sky1.jpg " style="height:450px; width: 100%" >
     </div>
     <div class="item">
-      <img src="/static/DarkSky-Dev/imgs/sky.jpg" style="height:450px; width: 100%" >
+      <img src="/static/DarkSky-Dev/imgs/sky6.png" style="height:450px; width: 100%" >
     </div>
   </div>
 
