--- a/Project code/demosky/templates/demosky/homebasic.html
+++ b/Project code/demosky/templates/demosky/homebasic.html
@@ -158,7 +158,7 @@ function myMap(searchObj) {
 <script type="text/javascript">
 
 //alert("hello");
-var x=sensor();
+/*var x=sensor();
 
 
     var html = "<table border='5px' style='width:1000px' align='center' background=''>";
@@ -203,7 +203,7 @@ function sensor() {
 	return q;
 
 }
-	
+*/	
 </script>
 
 {% endblock %}
