--- a/Project code/demosky/templates/demosky/verify-user.html
+++ b/Project code/demosky/templates/demosky/verify-user.html
@@ -1,15 +1,77 @@
-{% extends 'demosky/base.html' %}
+{% load staticfiles %}
+{% load static %}
 
-{% block title_block %} Register {% endblock %}
+<html>
+
 {% block head_block %}
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+ crossorigin="anonymous"> 
+ 
 {% endblock %}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
+
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
+<link rel="stylesheet" href="{% static " DarkSky-Dev/css/base.css " %}" />
+<link rel="stylesheet" href="{% static " DarkSky-Dev/css/bootstrap-social.css " %}" />
+<!-- CSS -->
+
+
+<body background="/static/DarkSky-Dev/imgs/Background.jpg">
+
+	<div class="wrapper">
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/demosky/">Nights Watch</a>
+				</div>
+				<ul class="nav navbar-nav" id="thenavigation">
+					<li><a href="/demosky/">Home</a></li>
+					{% if user.is_staff %}
+					<li><a href="/demosky/manage-user">Manage User</a></li>
+					<li><a href="/demosky/manage-sensors">Manage Sensors</a></li>
+					{% endif %}
+					<!-- bootsrap declerations
+      <li><a href="#">Page 1</a></li>-->
+				</ul>
+
+				{% if user.is_authenticated %}
+
+				<ul class="nav navbar-nav">
+					<li><a href="/demosky/profile">Profile</a></li>
+					<li><a href="/demosky/search">Socialize</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/demosky/logout/"><span class="glyphicon glyphicon-log-in"></span>{{request.user}} Logout</a></li>
+				</ul>
+
+
+				{% else %}
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/demosky/register/"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+					<li><a href="/demosky/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+				</ul>
+
+
+				{% endif %}
+
+			</div>
+		</nav>
+	</div>
+
+</body>
+
 
 {% block body_block %}
 <div class="container" style="width:100%">
 	
 
-<div class="container loginbox" align="center" class="text-big" >
+<div class="container loginbox" align="center" class="text-big" style="width: 500px;height:500px;padding-top:200px" border="3px" >
 	
 	<form method="post" class="text-big" id="tokenform" name ="tokenform">
 	{{error}}
@@ -22,4 +84,20 @@
 	</form>	
 
 </div>
+<div id="footer" style="background-color: #1F1F1F;position:fixed;bottom:0;left:0;width: 100%; height: 64px;" >
+	<div id="footcontainer">
+		<p style="color:white" align="center">
+			Created by the NightsWatch Team
+		</p>
+		<p align="center">
+			<a target="_blank" href="https://darksky.net/">Dark Sky</a> &nbsp;|&nbsp;
+			<a target="_blank" href="https://www.fs.usda.gov/hoosier/">Hoosier National Forest</a>
+
+		</p>
+	</div>
+</div>
+
+
 {% endblock %}
+
+
